--- a/index.html
+++ b/index.html
@@ -68,6 +68,21 @@
             <img src="assets/imgs/moreiconVector.png" alt="">
         </div>
     </div>
+
+    <div class="benefits">
+        <h1>Beneficios de aprender <br> a tocar um instrumento</h1>
+        <div class="divCardsBenefits">
+            <div class="cardBenefits">
+
+            </div>
+            <div class="cardBenefits">
+                
+            </div>
+            <div class="cardBenefits">
+                
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
