alteracoes no index//quase termino dos cards//quase termino das musicas recomendadas

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         rel="stylesheet">
     <title>YMusic | Home</title>
 </head>
-
 <body>
     <div class="divWelcome">
         <header>
@@ -73,16 +72,46 @@
         <h1>Beneficios de aprender <br> a tocar um instrumento</h1>
         <div class="divCardsBenefits">
             <div class="cardBenefits">
-
+                <img class="cardImgBenefits cardImgBenefitsFirst" src="assets/imgs/amnesia 1.png" alt="">
+                <h2>Melhora a memória</h2>
+                <p>São inúmeras as pesquisas que ligam a música e o tocar um instrumento ou cantar a uma memória mais afiada. O fato de estudar música (e todos seus elementos, como cifras ou partituras) exercita a memória e melhora o rendimento nos estudos e no trabalho.  </p>
+                <img class="imgMore" onclick="" src="assets/imgs/VectorForCardBenefits.png" alt="">
             </div>
             <div class="cardBenefits">
-                
+                <img class="cardImgBenefits" src="assets/imgs/hello 2.png" alt="">
+                <h2>Coordenação motora</h2>
+                <p>Por ativar diferentes áreas do cérebro, tocar um instrumento também age diretamente na coordenação motora. O cérebro precisa transformar o que lê nas partituras em movimento dos dedos e/ou movimento de respiração. Com o tempo de treino, a coordenação motora vai se apurando e se refinando.</p>
+                <img class="imgMore" onclick="" src="assets/imgs/VectorForCardBenefits.png" alt="">
             </div>
             <div class="cardBenefits">
-                
-            </div>
+                <img class="cardImgBenefits" src="assets/imgs/meditation 1.png" alt="">
+                <h2>Melhora a concentração</h2>
+                <p>A capacidade de manter o foco e a concentração também é um benefício de estudar música que ajuda na realização de tarefas no dia a dia, seja no estudo ou no trabalho. Para se tocar um instrumento, é fundamental manter o foco total na música e, com o tempo, esse exercício passa a fazer parte da rotina de quem estuda música. 
+                </p>
+                <img class="imgMore" onclick="" src="assets/imgs/VectorForCardBenefits.png" alt="">
+                </div>
         </div>
     </div>
-</body>
 
+    <div class="learnMusics">
+        <h1>Algumas musicas para aprender no violão</h1>
+
+        <div class="divGridMusics">
+            <div class="div1">
+                <img src="https://i.ytimg.com/vi/DHEOF_rcND8/maxresdefault.jpg" alt="">
+            </div>
+
+            <div class="div2"><img src="https://cdns-images.dzcdn.net/images/cover/1af2ff9c749201f12273ee81c7c1d5c5/500x500.jpg" alt=""></div>
+
+            <div class="div3">
+                <img src="https://i.ytimg.com/vi/orjH3QA12x0/mqdefault.jpg" alt="">
+            </div>
+            <div class="div4">
+                <img src="https://i.ytimg.com/vi/tAGnKpE4NCI/hqdefault.jpg" alt="">
+            </div>
+            <div class="div5"><img src="https://i.ytimg.com/vi/Ou8zCdy49LE/maxresdefault.jpg" alt=""></div>
+        </div>
+
+    </div>
+</body>
 </html>
