desenvolvimento da apresentação das ferramentas

--- a/index.html
+++ b/index.html
@@ -111,6 +111,35 @@
             </div>
             <div class="div5"><img src="https://i.ytimg.com/vi/Ou8zCdy49LE/maxresdefault.jpg" alt=""></div>
         </div>
+    </div>
+
+    <div class="divTools">
+        <h1>Principais ferramentas</h1>
+
+        <div class="divtoolsandguitar">
+            <div class="itemTools chords">
+                <div class="divCardTools cardChord">
+                    <h2>Dicionário de <br>acordes</h2>
+                    <p>Aprenda exatamente onde colocar seus dedos para tocar  qualquer acorde</p>
+                    <a class="buttonCardTools" href=""></a>
+                </div>
+            </div>
+            <div class="itemTools guitar"><img src="assets/imgs/guitar.png" alt=""></div>
+            <div class="itemTools simulator">
+                <div class="divCardTools cardSimulator">
+                    <h2>Simulador</h2>
+                    <p>Experimente alguns de nossos simuladores de instrumentos</p>
+                    <a class="buttonCardTools" href=""></a>
+                </div>
+            </div>
+            <div class="itemTools quiz">
+                <div class="divCardTools cardQuiz">
+                    <h2>Quiz</h2>
+                    <p>Veja qual instrumento musical é mais compatível com você.</p>
+                    <a class="buttonCardTools" href=""></a>
+                </div>
+            </div>
+        </div>
 
     </div>
 </body>
