alterções nas ferramentas e benefícios// e aplicando o fechamento e abertura dos cards no beneficios

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <title>YMusic | Home</title>
 </head>
+
 <body>
     <div class="divWelcome">
         <header>
@@ -61,7 +62,7 @@
         </div>
 
         <div class="divImgMusician">
-                <img src="assets/imgs/ImgIndexMusician.svg" alt="">
+            <img src="assets/imgs/ImgIndexMusician.svg" alt="">
         </div>
         <div class="divMore">
             <img src="assets/imgs/moreiconVector.png" alt="">
@@ -71,25 +72,32 @@
     <div class="benefits">
         <h1>Beneficios de aprender <br> a tocar um instrumento</h1>
         <div class="divCardsBenefits">
-            <div class="cardBenefits">
-                <img class="cardImgBenefits cardImgBenefitsFirst" src="assets/imgs/amnesia 1.png" alt="">
+            <div class="cardBenefits item1">
+                <img id="imgbenefits1" class="cardImgBenefits cardImgBenefitsFirst" src="assets/imgs/amnesia 1.png" alt="">
                 <h2>Melhora a memória</h2>
-                <p>São inúmeras as pesquisas que ligam a música e o tocar um instrumento ou cantar a uma memória mais afiada. O fato de estudar música (e todos seus elementos, como cifras ou partituras) exercita a memória e melhora o rendimento nos estudos e no trabalho.  </p>
-                <img class="imgMore" onclick="" src="assets/imgs/VectorForCardBenefits.png" alt="">
+                <p>São inúmeras as pesquisas que ligam a música e o tocar um instrumento ou cantar a uma memória mais
+                    afiada. O fato de estudar música (e todos seus elementos, como cifras ou partituras) exercita a
+                    memória e melhora o rendimento nos estudos e no trabalho. </p>
+                <img id="btnMostrar1" class="imgMore img1Button" src="assets/imgs/VectorForCardBenefits.png" alt="">
             </div>
-            <div class="cardBenefits">
-                <img class="cardImgBenefits" src="assets/imgs/hello 2.png" alt="">
+            <div class="cardBenefits item2">
+                <img id="imgbenefits2" class="cardImgBenefits" src="assets/imgs/hello 2.png" alt="">
                 <h2>Coordenação motora</h2>
-                <p>Por ativar diferentes áreas do cérebro, tocar um instrumento também age diretamente na coordenação motora. O cérebro precisa transformar o que lê nas partituras em movimento dos dedos e/ou movimento de respiração. Com o tempo de treino, a coordenação motora vai se apurando e se refinando.</p>
-                <img class="imgMore" onclick="" src="assets/imgs/VectorForCardBenefits.png" alt="">
+                <p>Por ativar diferentes áreas do cérebro, tocar um instrumento também age diretamente na coordenação
+                    motora. O cérebro precisa transformar o que lê nas partituras em movimento dos dedos e/ou movimento
+                    de respiração. Com o tempo de treino, a coordenação motora vai se apurando e se refinando.</p>
+                <img id="btnMostrar2" class="imgMore img2Button" src="assets/imgs/VectorForCardBenefits.png" alt="">
             </div>
-            <div class="cardBenefits">
-                <img class="cardImgBenefits" src="assets/imgs/meditation 1.png" alt="">
+            <div class="cardBenefits item3">
+                <img id="imgbenefits3" class="cardImgBenefits" src="assets/imgs/meditation 1.png" alt="">
                 <h2>Melhora a concentração</h2>
-                <p>A capacidade de manter o foco e a concentração também é um benefício de estudar música que ajuda na realização de tarefas no dia a dia, seja no estudo ou no trabalho. Para se tocar um instrumento, é fundamental manter o foco total na música e, com o tempo, esse exercício passa a fazer parte da rotina de quem estuda música. 
+                <p>A capacidade de manter o foco e a concentração também é um benefício de estudar música que ajuda na
+                    realização de tarefas no dia a dia, seja no estudo ou no trabalho. Para se tocar um instrumento, é
+                    fundamental manter o foco total na música e, com o tempo, esse exercício passa a fazer parte da
+                    rotina de quem estuda música.
                 </p>
-                <img class="imgMore" onclick="" src="assets/imgs/VectorForCardBenefits.png" alt="">
-                </div>
+                <img id="btnMostrar3" class="imgMore img3Button" src="assets/imgs/VectorForCardBenefits.png" alt="">
+            </div>
         </div>
     </div>
 
@@ -101,7 +109,9 @@
                 <img src="https://i.ytimg.com/vi/DHEOF_rcND8/maxresdefault.jpg" alt="">
             </div>
 
-            <div class="div2"><img src="https://cdns-images.dzcdn.net/images/cover/1af2ff9c749201f12273ee81c7c1d5c5/500x500.jpg" alt=""></div>
+            <div class="div2"><img
+                    src="https://cdns-images.dzcdn.net/images/cover/1af2ff9c749201f12273ee81c7c1d5c5/500x500.jpg"
+                    alt=""></div>
 
             <div class="div3">
                 <img src="https://i.ytimg.com/vi/orjH3QA12x0/mqdefault.jpg" alt="">
@@ -115,32 +125,74 @@
 
     <div class="divTools">
         <h1>Principais ferramentas</h1>
+        <div class="divToolsTop">
+            <div class="divCardTools cardChord">
+                <h2>Dicionário de <br>acordes</h2>
+                <p>Aprenda exatamente onde colocar seus dedos para tocar qualquer acorde</p>
+                <a class="buttonCardTools" href=""><img src="assets/imgs/VectorForCardBenefits.png" alt=""></a>
+            </div>
 
-        <div class="divtoolsandguitar">
-            <div class="itemTools chords">
-                <div class="divCardTools cardChord">
-                    <h2>Dicionário de <br>acordes</h2>
-                    <p>Aprenda exatamente onde colocar seus dedos para tocar  qualquer acorde</p>
-                    <a class="buttonCardTools" href=""></a>
-                </div>
-            </div>
-            <div class="itemTools guitar"><img src="assets/imgs/guitar.png" alt=""></div>
-            <div class="itemTools simulator">
-                <div class="divCardTools cardSimulator">
-                    <h2>Simulador</h2>
-                    <p>Experimente alguns de nossos simuladores de instrumentos</p>
-                    <a class="buttonCardTools" href=""></a>
-                </div>
-            </div>
-            <div class="itemTools quiz">
-                <div class="divCardTools cardQuiz">
-                    <h2>Quiz</h2>
-                    <p>Veja qual instrumento musical é mais compatível com você.</p>
-                    <a class="buttonCardTools" href=""></a>
-                </div>
+            <div class="guitar"><img src="assets/imgs/guitar.png" alt=""></div>
+
+            <div class="divCardTools cardSimulator">
+                <h2>Simulador</h2>
+                <p>Experimente alguns de nossos simuladores de instrumentos</p>
+                <a class="buttonCardTools" href=""><img src="assets/imgs/VectorForCardBenefits.png" alt=""></a>
             </div>
         </div>
-
+        <div class="divCardTools cardQuiz">
+            <h2>Quiz</h2>
+            <p>Veja qual instrumento musical é mais compatível com você.</p>
+            <a class="buttonCardTools" href=""><img src="assets/imgs/VectorForCardBenefits.png" alt=""></a>
+        </div>
     </div>
 </body>
 </html>
+
+<script>
+    var imgBenefits1 = document.getElementById("imgbenefits1")
+    var btn1 = document.getElementById("btnMostrar1");
+    var teste1 = document.querySelector('.item1');
+    btn1.addEventListener('click', function(){
+        if(teste1.className == 'cardBenefits item1') {
+      teste1.className = 'cardBenefitsactive'
+      btn1.className = 'imgMoreActive'
+      imgBenefits1.style.display = "none"
+  } else {
+      teste1.className = 'cardBenefits item1';
+      imgBenefits1.style.display = "flex"
+      imgBenefits1.style.transition="2s";
+  }
+});
+var imgBenefits2 = document.getElementById("imgbenefits2")
+var btn2 = document.getElementById("btnMostrar2");
+    var teste2 = document.querySelector('.item2');
+    btn2.addEventListener('click', function(){
+        if(teste2.className == 'cardBenefits item2') {
+      teste2.className = 'cardBenefitsactive'
+      btn2.className = 'imgMoreActive'
+      imgBenefits2.style.display = "none"
+
+      
+  } else {
+      teste2.className = 'cardBenefits item2';
+      imgBenefits2.style.display = "block"
+  }
+});
+var imgBenefits3 = document.getElementById("imgbenefits3")
+var btn3 = document.getElementById("btnMostrar3");
+    var teste3 = document.querySelector('.item3');
+    btn3.addEventListener('click', function(){
+        if(teste3.className == 'cardBenefits item3') {
+      teste3.className = 'cardBenefitsactive'
+      btn3.className = 'imgMoreActive'
+      imgBenefits3.style.display = "none"
+
+  } else {
+      teste3.className = 'cardBenefits item3';
+      imgBenefits3.style.display = "block"
+  }
+});
+    
+
+</script>
