--- a/cadastro.html
+++ b/cadastro.html
@@ -27,7 +27,9 @@
             <input id="email_input" placeholder="E-mail:" type="text">
             <input id="senha_input" placeholder="Senha:" type="text">
             <input id="confirmacao_senha_input" placeholder="Senha:" type="text">
-            <button>Cadastrar</button>
+            <button onclick="cadastrar()" class="buttonSignUp">Cadastrar</button>
+
+            <h3>já tem uma conta? <a href="">Conecte-se</a> </h3>
         </div>
     </div>
 </body>
@@ -36,7 +38,7 @@
 <script>
 
 function cadastrar() {
-        aguardar();
+        // aguardar();
 
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
