alterações no cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -38,7 +38,7 @@
 <script>
 
 function cadastrar() {
-        // aguardar();
+        aguardar();
 
         //Recupere o valor da nova input pelo nome do id
         // Agora vá para o método fetch logo abaixo
@@ -51,7 +51,7 @@ function cadastrar() {
             cardErro.style.display = "block"
             mensagem_erro.innerHTML = "(Mensagem de erro para todos os campos em branco)";
 
-            finalizarAguardar();
+            finalizarAguardar()
             return false;
         }
         else {
