alterando estrutura da aplicação// falta concluir a parte de cadastro

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/imgs/YMusicFontColor.png" type="image/x-icon">
     <!-- links -->
+    <!-- link dos scripts js -->
+    <script src="js/funcoes.js"></script>
+
     <!-- link css -->
     <link rel="stylesheet" href="styles/style.css">
     <!-- link font -->
@@ -43,7 +46,7 @@
                             <li>Login</li>
                         </a>
                     </ul>
-                    <button><a href="">Cadastro</a></button>
+                    <button><a href="cadastro.html">Cadastro</a></button>
                 </div>
             </nav>
         </header>
@@ -148,4 +151,5 @@
     </div>
 </body>
 </html>
-<script src="scripts/jsInStyles/toggleCardBenefits.js"></script>
+
+<script src="js/jsInStyles/toggleCardBenefits.js"></script>
