--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                         <a href="">
                             <li>Ferramentas</li>
                         </a>
-                        <a href="">
+                        <a href="login.html">
                             <li>Login</li>
                         </a>
                     </ul>
