--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -120,7 +120,7 @@ function obterDadosGrafico() {
                     yAxisID: 'y-violao',
                     label: 'Violão',
                     borderColor: '#32B9CD',
-                    backgroundColor: '#32b9cd8f',
+                    backgroundColor: '#fff',
                     fill: true,
                     data: []
                 },
@@ -137,10 +137,13 @@ function obterDadosGrafico() {
 
         for (i = 0; i < resposta.length; i++) {
             var registro = resposta[i];
-            dados.labels.push(registro.nomeIntrumento);
-            dados.datasets[0].data.push(registro.contagemIns);
-            // dados.datasets[1].data.push(registro.contagemIns);
+            dados.datasets[i].data.push(registro.contagemIns);
+            // dados.datasets[i].data.push(registro.contagemIns);
         }
+        dados.labels.push(registro.nomeIntrumento);
+
+
+        
 
         console.log(JSON.stringify(dados));
 
